--- a/.gitignore
+++ b/.gitignore
@@ -2,37 +2,5 @@
 PinewoodDerby/Untitled Sketch 2.fzz
 Pinout-NANO_latest.pdf
 *.pdf
-libraries/Adafruit_BusIO/Adafruit_BusIO_Register.cpp
-libraries/Adafruit_BusIO/Adafruit_BusIO_Register.h
-libraries/Adafruit_BusIO/Adafruit_I2CDevice.cpp
-libraries/Adafruit_BusIO/Adafruit_I2CDevice.h
-libraries/Adafruit_BusIO/Adafruit_I2CRegister.h
-libraries/Adafruit_BusIO/Adafruit_SPIDevice.cpp
-libraries/Adafruit_BusIO/Adafruit_SPIDevice.h
-libraries/Adafruit_BusIO/examples/i2c_address_detect/i2c_address_detect.ino
-libraries/Adafruit_BusIO/examples/i2c_readwrite/i2c_readwrite.ino
-libraries/Adafruit_BusIO/examples/i2c_registers/i2c_registers.ino
-libraries/Adafruit_BusIO/examples/i2corspi_register/i2corspi_register.ino
-libraries/Adafruit_BusIO/examples/spi_modetest/spi_modetest.ino
-libraries/Adafruit_BusIO/examples/spi_readwrite/spi_readwrite.ino
-libraries/Adafruit_BusIO/examples/spi_register_bits/spi_register_bits.ino
-libraries/Adafruit_BusIO/examples/spi_registers/spi_registers.ino
-libraries/Adafruit_BusIO/library.properties
-libraries/Adafruit_BusIO/LICENSE
-libraries/Adafruit_BusIO/README.md
-libraries/Adafruit_LIS3DH/Adafruit_LIS3DH.cpp
-libraries/Adafruit_LIS3DH/Adafruit_LIS3DH.h
-libraries/Adafruit_LIS3DH/assets/image.jpg
-libraries/Adafruit_LIS3DH/code-of-conduct.md
-libraries/Adafruit_LIS3DH/examples/acceldemo/acceldemo.ino
-libraries/Adafruit_LIS3DH/examples/adcdemo/adcdemo.ino
-libraries/Adafruit_LIS3DH/examples/tapdemo/tapdemo.ino
-libraries/Adafruit_LIS3DH/library.properties
-libraries/Adafruit_LIS3DH/license.txt
-libraries/Adafruit_LIS3DH/README.md
-libraries/Adafruit_Unified_Sensor/Adafruit_Sensor.cpp
-libraries/Adafruit_Unified_Sensor/Adafruit_Sensor.h
-libraries/Adafruit_Unified_Sensor/examples/sensortest/sensortest.ino
-libraries/Adafruit_Unified_Sensor/library.properties
-libraries/Adafruit_Unified_Sensor/LICENSE.txt
-libraries/Adafruit_Unified_Sensor/README.md
+libraries/*
+libraries backup/*
